--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,8 @@ dependencies {
 
     //okhttp
     implementation("com.squareup.okhttp3:okhttp:3.12.0")
+
+    //rxjava
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
