--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <activity android:name=".okhttp.base_opration.get.GetAct"/>
         <activity android:name=".okhttp.base_opration.head.Head"/>
+        <activity android:name=".okhttp.base_opration.header.HeaderAct"/>
     </application>
 
 </manifest>
